--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -3,6 +3,14 @@ nl:
   number:
     currency:
       alphabetic_code: EUR
+      format:
+        delimiter: "."
+        format: "%u%n"
+        precision: 2
+        separator: ","
+        significant: false
+        strip_insignificant_zeros: false
+        unit: "€"
   activerecord:
     models:
       ad: Advertentie #g
