--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1153,8 +1153,8 @@ en:
       yesterday_at: Yesterday at %{created_at}
       pdf: PDF
     bike_show_overlays:
-      please_tell_us_how_you_got_your_biketype_: Please tell us how you got your %{biketype} back, we really care!
-      its_also_how_we_get_better_at_recovering_: It's also how we get better at recovering bikes.
+      please_tell_us_how_you_got_your_bike: Please tell us how you got your %{bike_type} back, we really care!
+      its_also_how_we_get_better_at_recovering: It's also how we get better at recovering bikes.
       how_did_you_get_it_back: How did you get it back?
       when_did_you_recover_it: When did you recover it?
       did_we_help: Did we help?
@@ -1162,14 +1162,14 @@ en:
       mark_recovered: Mark recovered
       nevermind: Nevermind
       your_bike: Your %{bike_type}
-      were_honored_to_have_your_biketype_on_the: We're honored to have your %{biketype} on the Index.
+      were_honored_to_have_your_bike: We're honored to have your %{bike_type} on the Index.
       claim_it_so_you_can_update_your_listing: Claim it so you can update your listing.
-      claim_biketype: Claim %{biketype}
-      this_biketype_is_hidden: This %{biketype} is hidden.
+      claim_bike_type: Claim %{bike_type}
+      this_bike_type_is_hidden: This %{bike_type} is hidden.
       no_one_can_see_it_but_you: No one can see it but you
-      thank_you_for_recovering_this_biketype: Thank you for recovering this %{biketype}!
-      were_really_bummed_your_biketype_was_stol: We're really bummed your %{biketype} was stolen.
-      whoa_this_awesome_biketype_is_yours: Whoa, this awesome %{biketype} is yours!
+      thank_you_for_recovering_this_bike_type: Thank you for recovering this %{bike_type}!
+      were_really_bummed_your_bike_type_was_stol: We're really bummed your %{bike_type} was stolen.
+      whoa_this_awesome_bike_type_is_yours: Whoa, this awesome %{bike_type} is yours!
       add_some_more_information_about_it: Add some more information about it.
       add_a_picture_so_people_know_what_to_look: Add a picture so people know what to look for!
       add_a_picture_of_it_so_everyone_can_admir: Add a picture of it, so everyone can admire its beauty!
