Add convert_time formatting

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -212,6 +212,7 @@ es:
       long: "%-d de %B de %Y %H:%M"
       short: "%-d de %b %H:%M"
     pm: pm
+    convert_time: "%FT%T%z" # TODO: Localize
 
   activerecord:
     errors:
