Externalize bikes templates (#1001)
Externalizes strings for templates in `app/views/bikes/*`.

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -211,6 +211,8 @@ es:
       default: "%A, %-d de %B de %Y %H:%M:%S %z"
       long: "%-d de %B de %Y %H:%M"
       short: "%-d de %b %H:%M"
+      short_with_hour: "%m.%d.%y - %l%P" # TODO: Localize
+      convert_time: "%FT%T%z" # TODO: Localize
     pm: pm
 
   activerecord:
