--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -3,6 +3,18 @@ nl:
   number:
     currency:
       alphabetic_code: EUR
+      format:
+        delimiter: "."
+        format: "%u%n"
+        precision: 2
+        separator: ","
+        significant: false
+        strip_insignificant_zeros: false
+        unit: "€"
+  time:
+    formats:
+      convert_time: "%FT%T%z" # TODO: Localize
+      short_with_hour: "%m.%d.%y - %l%P" # TODO: Localize
   activerecord:
     models:
       ad: Advertentie #g
