--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -101,41 +101,6 @@ en:
       day: Day
       month: Month
       year: Year
-  errors:
-    format: "%{attribute} %{message}"
-    messages:
-      accepted: must be accepted
-      blank: can't be blank
-      confirmation: doesn't match confirmation
-      empty: can't be empty
-      equal_to: must be equal to %{count}
-      even: must be even
-      exclusion: is reserved
-      greater_than: must be greater than %{count}
-      greater_than_or_equal_to: must be greater than or equal to %{count}
-      inclusion: is not included in the list
-      invalid: is invalid
-      less_than: must be less than %{count}
-      less_than_or_equal_to: must be less than or equal to %{count}
-      not_a_number: is not a number
-      not_an_integer: must be an integer
-      odd: must be odd
-      record_invalid: "Validation failed: %{errors}"
-      taken: has already been taken
-      too_long:
-        one: is too long (maximum is 1 character)
-        other: is too long (maximum is %{count} characters)
-      too_short:
-        one: is too short (minimum is 1 character)
-        other: is too short (minimum is %{count} characters)
-      wrong_length:
-        one: is the wrong length (should be 1 character)
-        other: is the wrong length (should be %{count} characters)
-    template:
-      body: "There were problems with the following fields:"
-      header:
-        one: 1 error prohibited this %{model} from being saved
-        other: "%{count} errors prohibited this %{model} from being saved"
   helpers:
     page_entries_info:
       one_page:
@@ -287,6 +252,58 @@ en:
   doorkeeper:
     scopes:
       public: Authenticate with you, view public information
+  errors:
+    format: "%{attribute} %{message}"
+    messages:
+      accepted: must be accepted
+      blank: can't be blank
+      confirmation: doesn't match confirmation
+      empty: can't be empty
+      equal_to: must be equal to %{count}
+      even: must be even
+      exclusion: is reserved
+      greater_than: must be greater than %{count}
+      greater_than_or_equal_to: must be greater than or equal to %{count}
+      inclusion: is not included in the list
+      invalid: is invalid
+      less_than: must be less than %{count}
+      less_than_or_equal_to: must be less than or equal to %{count}
+      not_a_number: is not a number
+      not_an_integer: must be an integer
+      odd: must be odd
+      record_invalid: "Validation failed: %{errors}"
+      taken: has already been taken
+      too_long:
+        one: is too long (maximum is 1 character)
+        other: is too long (maximum is %{count} characters)
+      too_short:
+        one: is too short (minimum is 1 character)
+        other: is too short (minimum is %{count} characters)
+      wrong_length:
+        one: is the wrong length (should be 1 character)
+        other: is the wrong length (should be %{count} characters)
+    template:
+      body: "There were problems with the following fields:"
+      header:
+        one: 1 error prohibited this %{model} from being saved
+        other: "%{count} errors prohibited this %{model} from being saved"
+    bad_request:
+      explanation: We're sorry, we didn't understand what you just asked. Why don't you try again?
+      send_me_back: Send me back from whence I came!
+    not_found:
+      explanation: We're sorry, the page you were looking for wasn't there.
+      send_me_back: Send me back from whence I came!
+    server_error:
+      explanation: We're sorry, there was a server error and we can't show you that page.
+      send_me_back: Send me back from whence I came!
+    unauthorized:
+      explanation: We're sorry, you aren't allowed to do that.
+      send_me_back: Send me back from whence I came!
+    unprocessable_entity:
+      contact: Contact
+      contact_email: contact@bikeindex.org
+      explanation_html: "We're sorry, We can't do what you just asked. Think you ought to be able to? Email us: %{email_link}."
+      send_me_back: Send me back from whence I came!
   controllers:
     bikes:
       bike_details: Bike Details
